<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
	    android:id="@+id/menu_start"
		android:icon="@drawable/ic_start"
		android:title="@string/menu_start"
		android:showAsAction="always"
	/>

	<item
	    android:id="@+id/menu_pause"
		android:icon="@drawable/ic_pause"
		android:title="@string/menu_pause"
		android:showAsAction="always"
		android:visible="false"
	/>

	<item
	    android:id="@+id/menu_stop"
		android:icon="@drawable/ic_stop"
		android:title="@string/menu_stop"
		android:showAsAction="always"
		android:enabled="false"
	/>

	<item
	    android:id="@+id/menu_sign_in"
		android:title="@string/menu_sign_in"
		android:showAsAction="never"
	/>

	<item
	    android:id="@+id/menu_sign_out"
		android:title="@string/menu_sign_out"
		android:showAsAction="never"
	/>

</menu>
